<resources>
    <string name="app_name">Delivery</string>
    <string name="getStarted">Get Started</string>
    <string name="haveAnotherAccount">Have another account? </string>
    <string name="signInNow"><a href="http://www.bla.com">Sign in now</a></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="bySigningUp">By signing up, you agree</string>
    <string name="termsOfUse"><a href="http://www.bla.com">terms of use</a></string>
    <string name="alreadyHaveAnAccount">Already have an account? </string>
    <string name="signIn"><a href="http://www.bla.com">Sign In</a></string>
    <string name="signUp">Sign Up</string>
    <string name="forgotYourPassword"><a href="http://www.bla.com">Forgot Your Password</a></string>
    <string name="or">Or</string>
    <string name="popularBrand">Popular Brand</string>
    <string name="suggestName">The Alley, Bún thịt nướng,&#8230;</string>
    <string name="nameCoffee">The Coffee House</string>
    <string name="address">444A Cộng Hòa, P13, Tân Bình, TPHCM</string>
    <string name="distance">588km</string>
    <string name="nameUser">Đặng Ngọc Thanh Duyên</string>
    <string name="phoneUser">0332533968</string>
    <string name="emailUser">dangngocthanhduyen.2712@gmail.com</string>
    <string name="signOut">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="load">Không có thông báo</string>
    <string name="editProfile">Edit Profile</string>
    <string name="history">History</string>
    <string name="storename">The Coffee House</string>
    <string name="order_status">Đã hoàn thành</string>
    <string name="time">18:21       12/10/2018</string>
    <string name="price">87.000đ</string>
    <string name="category">DRINK</string>
    <string name="order">Order</string>
    <string name="product">Trà sữa trân châu hoàng gia</string>
    <string name="submit"><a href="http://www.bla.com">SUBMIT</a></string>


</resources>
