<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:textAlignment="center"
        app:title="@string/editProfile"/>

    <ImageView
        android:layout_below="@+id/toolbar"
        android:id="@+id/avatar_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@+id/avatar_iv"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_tv"
        android:textColorLink="@android:color/darker_gray"
        android:text="@string/nameUser"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/name_et"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_tv"
        android:textColorLink="@android:color/darker_gray"
        android:text="@string/emailUser"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@+id/email_et"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_tv"
        android:textColorLink="@android:color/darker_gray"
        android:text="@string/phoneUser"
        android:layout_marginStart="15dp"/>

    <Button
        android:layout_margin="15dp"
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/startBlue"
        android:text="@string/save"
        android:textColor="#FFF"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
