<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/logo_iv"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_iv"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:textColorLink="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:textColorLink="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:hint="@string/confirmPassword"
        android:layout_marginTop="10dp"
        android:textColorLink="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/tv_rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/sign_up_btn">
        <TextView
            android:text="@string/bySigningUp"
            android:id="@+id/by_signing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"/>

        <TextView
            android:paddingLeft="5dp"
            android:id="@+id/terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/by_signing_up"
            android:layout_toRightOf="@+id/by_signing_up"
            android:linksClickable="true"
            android:text="@string/termsOfUse"
            android:textColorLink="@android:color/holo_blue_dark"/>
    </RelativeLayout>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/startBlue"
        android:text="@string/signUp"
        android:layout_above="@+id/tv_rl2"
        android:textColor="#FFF"/>

    <RelativeLayout
        android:id="@+id/tv_rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp">
        <TextView
            android:text="@string/haveAnotherAccount"
            android:id="@+id/have_another_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"/>

        <TextView
            android:paddingLeft="5dp"
            android:id="@+id/sign_in_now_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/have_another_account_tv"
            android:layout_toRightOf="@+id/have_another_account_tv"
            android:linksClickable="true"
            android:text="@string/signInNow"
            android:textColorLink="@android:color/holo_blue_dark"/>
    </RelativeLayout>


</RelativeLayout>