<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="@string/history"></android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/trasua" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_store_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/storename"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone_user_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/address"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/order_status"
                        android:textColor="@color/orangelight" />

                    <TextView
                        android:id="@+id/time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/time"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/price_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/price"
                        android:textColor="@android:color/black" />


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>



    <!--Menu-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/home_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home_black_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/menu_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_blue_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/noti_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_notifications_black_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/person_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_weight="1"/>


    </LinearLayout>


</LinearLayout>