<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <!--User and Button Sign out-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/user">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/dang_ngoc_thanh_duyen"/>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/name_user_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/nameUser"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/phone_user_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:textColor="@android:color/black"
                        android:text="@string/phoneUser"/>

                    <TextView
                        android:id="@+id/email_user_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:textColor="@android:color/black"
                        android:text="@string/emailUser"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/signOut" />

        </RelativeLayout>



    </RelativeLayout>




    <!--Menu-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home_black_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_black_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_notifications_black_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/person_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person_blue_24dp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>